# ProgrammingExamples

rectangleQt/: CMakeLists.txt
rectangleQt/include/: canvas.h  point.h  rectangle.h  window.h
rectangleQt/src/: canvas.cpp  main.cpp  point.cpp  rectangle.cpp  window.cpp
